dyanmic fragments and parcelables

--- a/corso/src/main/res/values/strings.xml
+++ b/corso/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CorsoApp</string>
     <string name="hello">Hello World!!!</string>
+    <string name="swap">Swap</string>
+    <string name="login">Login</string>
+    <string name="register">Registrati</string>
 </resources>
